# otus-c

./: .clang-format  .gitignore
.devcontainer/: devcontainer.json
hw1/: start
hw1/src/: main  main.c  main2.c
hw10/: CMakeLists.txt
hw10/assets/: file.txt  watcher.conf
hw10/src/: main.c
hw11/: CMakeLists.txt
hw11/src/: main.c
hw12/: CMakeLists.txt  Makefile  compile_commands.json
hw12/include/: circular_buffer.h  hashtable.h  stat_url.h  thread_pool.h
hw12/src/: circular_buffer.c  hashtable.c  main.c  thread_pool.c
hw12/test/: CMakeLists.txt  hashtable_test.c  test_circular_buffer.c
hw13/: CMakeLists.txt  Dockerfile  Makefile  compile_commands.json
hw13/.devcontainer/: devcontainer.json
hw13/src/: main.c
hw2/assets/: cp1251-utf-8.txt  cp1251.txt  iso-8859-5-utf-8.txt  koi8-utf-8.txt
hw2/src/: main  main.c
hw2/src/main.dSYM/Contents/Resources/DWARF/: main
hw2/src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
hw3/: CMakeLists.txt  Makefile
hw3/assets/: test.txt  test2.txt  test3.txt
hw3/src/: hashtable.c  hashtable.h  main.c
hw4/: Makefile
hw4/src/: curl.c  curl.h  main.c
hw5/: Dockerfile  Makefile  main.asm
hw5/src/: a.out  main.c
hw6/: Readme.md
hw7/: Makefile  hw.diff  output2.txt
hw8/: .clang-format  CMakeLists.txt  Makefile  compile_commands.json  handout-12926-1865d9.md
hw8/src/: main.c
hw9/: CMakeLists.txt  logfile.txt
hw9/src/: logger.c  logger.h  main.c
lesson1/: main.c
